--- a/index.html
+++ b/index.html
@@ -13,5 +13,30 @@
         <p>John Doe</p>
         <button class="header-btn"><i class="fas fa-bars"></i></button>
     </header>
+
+    <div class="container">
+        <ul class="headline">
+            <li class="primary-text">
+                <h1>Hey There. <br> I’m Alex</h1>
+            </li>
+            <li class="supporting-text">
+                <h2>I’am a Software Developer</h2>
+            </li>
+            <li class="description">
+                <h4>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                    don’t hestiate to contact me.</h4>
+            </li>
+            <ul class="social-media">
+                <li><i class="fa fa-brands fa-github"></i></li>
+                <li><i class="fa fa-brands fa-linkedin"></i></li>
+                <li><i class="fa fa-brands fa-twitter"></i></li>
+                <li><i class="fa fa-brands fa-twitter"></i></li>
+                <li><i class="fa fa-brands fa-medium"></i></li>
+            </ul>
+        </ul>
+        <div class="export-image">
+            <img src="assets/images/illustration-header-mobile.png" alt="cool vectors">
+        </div>
+    </div>
 </body>
 </html>
