Update and Fix header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <p>John Doe</p>
-        <button class="header-btn"><i class="fas fa-bars"></i></button>
+        <a href="#"><img src="assets/images/Logo Placeholder.png" alt="John Doe"></a>
+        <nav><i class="fas fa-bars"></i></nav>
     </header>
 
     <div class="container">
