--- a/index.html
+++ b/index.html
@@ -15,29 +15,26 @@
         <nav><i class="fas fa-bars"></i></nav>
     </header>
 
-    <div class="container">
+    <section class="container">
         <ul class="headline">
             <li class="primary-text">
                 <h1>Hey There. <br> I’m Alex</h1>
             </li>
             <li class="supporting-text">
-                <h2>I’am a Software Developer</h2>
+                <p>I’am a Software Developer</p>
             </li>
             <li class="description">
-                <h4>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-                    don’t hestiate to contact me.</h4>
+                <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                    don’t hestiate to contact me.</p>
             </li>
-            <ul class="social-media">
-                <li><i class="fa fa-brands fa-github"></i></li>
-                <li><i class="fa fa-brands fa-linkedin"></i></li>
-                <li><i class="fa fa-brands fa-twitter"></i></li>
-                <li><i class="fa fa-brands fa-twitter"></i></li>
-                <li><i class="fa fa-brands fa-medium"></i></li>
-            </ul>
+            <li class="social-media">
+                <a href="https://github.com/jlvFlores"><i class="fa fa-brands fa-github fa-1x"></i></a>
+                <a href="https://www.linkedin.com/in/jose-vazquez-178a8225a/"><i class="fa fa-brands fa-linkedin fa-1x"></i></a>
+                <a href="#"><i class="fa fa-brands fa-angellist fa-1x"></i></a>
+                <a href="#"><i class="fa fa-brands fa-twitter fa-1x"></i></i></a>
+                <a href="#"><i class="fa fa-brands fa-medium fa-1x"></i></a>
+            </li>
         </ul>
-        <div class="export-image">
-            <img src="assets/images/illustration-header-mobile.png" alt="cool vectors">
-        </div>
-    </div>
+    </section>
 </body>
 </html>
