--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1>Hey There. <br> I’m Alex</h1>
             </li>
             <li class="supporting-text">
-                <p>I’am a Software Developer</p>
+                <h2>I’am a Software Developer</h2>
             </li>
             <li class="description">
                 <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
