Add works section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8c5a2b9118.js" crossorigin="anonymous"></script>
     <title>Portfolio Setup</title>
@@ -35,6 +35,105 @@
                 <a href="#"><i class="fa fa-brands fa-medium fa-1x"></i></a>
             </li>
         </ul>
+        <div class="recent-works">
+            <h2>My Recent Works</h2>
+            <div class="grid-con">
+                <div class="featured">
+                    <img src="assets/images/Img Placeholder.png" alt="Girl practicing yoga inside orange circle and border">
+                    <div class="right-block">
+                        <h3>Multi-Post Stories</h3>
+                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+                        <ul class="tags">
+                            <li>css</li>
+                            <li>html</li>
+                            <li>bootstrap</li>
+                            <li>Ruby</li>
+                        </ul>
+                        <button class="featured-btn">See Project</button>
+                    </div>
+                </div>
+                <div class="card-works">
+                    <div class="card">
+                        <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
+                        <div class="right-block">
+                            <h3>Profesional Art Printing Data</h3>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
+                            <ul class="tags">
+                                <li>html</li>
+                                <li>bootstrap</li>
+                                <li>Ruby</li>
+                            </ul>
+                            <button class="card-btn">See Project</button>
+                        </div>
+                    </div>
+                    <div class="card"> <!-- Flex container-->
+                        <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
+                        <div class="right-block">
+                            <h3>Profesional Art Printing Data</h3>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
+                            <ul class="tags">
+                                <li>html</li>
+                                <li>bootstrap</li>
+                                <li>Ruby</li>
+                            </ul>
+                            <button class="card-btn">See Project</button>
+                        </div>
+                    </div>
+                    <div class="card"> <!-- Flex container-->
+                        <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
+                        <div class="right-block">
+                            <h3>Profesional Art Printing Data</h3>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
+                            <ul class="tags">
+                                <li>html</li>
+                                <li>bootstrap</li>
+                                <li>Ruby</li>
+                            </ul>
+                            <button class="card-btn">See Project</button>
+                        </div>
+                    </div>
+                    <div class="card"> <!-- Flex container-->
+                        <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
+                        <div class="right-block">
+                            <h3>Profesional Art Printing Data</h3>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
+                            <ul class="tags">
+                                <li>html</li>
+                                <li>bootstrap</li>
+                                <li>Ruby</li>
+                            </ul>
+                            <button class="card-btn">See Project</button>
+                        </div>
+                    </div>
+                    <div class="card"> <!-- Flex container-->
+                        <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
+                        <div class="right-block">
+                            <h3>Profesional Art Printing Data</h3>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
+                            <ul class="tags">
+                                <li>html</li>
+                                <li>bootstrap</li>
+                                <li>Ruby</li>
+                            </ul>
+                            <button class="card-btn">See Project</button>
+                        </div>
+                    </div>
+                    <div class="card"> <!-- Flex container-->
+                        <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
+                        <div class="right-block">
+                            <h3>Profesional Art Printing Data</h3>
+                            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
+                            <ul class="tags">
+                                <li>html</li>
+                                <li>bootstrap</li>
+                                <li>Ruby</li>
+                            </ul>
+                            <button class="card-btn">See Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
