Remove unnecessary comments HTML

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <button class="card-btn">See Project</button>
                         </div>
                     </div>
-                    <div class="card"> <!-- Flex container-->
+                    <div class="card">
                         <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
                         <div class="right-block">
                             <h3>Profesional Art Printing Data</h3>
@@ -79,7 +79,7 @@
                             <button class="card-btn">See Project</button>
                         </div>
                     </div>
-                    <div class="card"> <!-- Flex container-->
+                    <div class="card">
                         <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
                         <div class="right-block">
                             <h3>Profesional Art Printing Data</h3>
@@ -92,7 +92,7 @@
                             <button class="card-btn">See Project</button>
                         </div>
                     </div>
-                    <div class="card"> <!-- Flex container-->
+                    <div class="card">
                         <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
                         <div class="right-block">
                             <h3>Profesional Art Printing Data</h3>
@@ -105,7 +105,7 @@
                             <button class="card-btn">See Project</button>
                         </div>
                     </div>
-                    <div class="card"> <!-- Flex container-->
+                    <div class="card">
                         <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
                         <div class="right-block">
                             <h3>Profesional Art Printing Data</h3>
@@ -118,7 +118,7 @@
                             <button class="card-btn">See Project</button>
                         </div>
                     </div>
-                    <div class="card"> <!-- Flex container-->
+                    <div class="card">
                         <img src="assets/images/Card Placeholder.png" alt="text book image with a dark mask over it">
                         <div class="right-block">
                             <h3>Profesional Art Printing Data</h3>
