--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <li>bootstrap</li>
                             <li>Ruby</li>
                         </ul>
-                        <button class="featured-btn">See Project</button>
+                        <button class="regular-btn">See Project</button>
                     </div>
                 </div>
                 <div class="card-works">
@@ -133,6 +133,53 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="about">
+            <div class="gen-desc">
+                <h2 class="heading-text">About me</h2>
+                <p class="paragraph-text">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+                <button class="regular-btn">Get My Resume</button>
+            </div>
+            <ul class="skills">
+                <li>
+                    <div class="sub-skills">
+                        <img src="assets/images/Rectangle 55.png" alt="diamond">
+                        <h3>Language</h3>
+                    </div>
+                    <ul class="skill-type">
+                        <li>Javascript</li>
+                        <li>Ruby</li>
+                        <li>Html</li>
+                        <li>Css</li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="sub-skills">
+                        <img src="assets/images/Rectangle 56.png" alt="diamond">
+                        <h3>Framework</h3>
+                    </div>
+                    <ul class="skill-type">
+                        <li>Bootstrap</li>
+                        <li>Ruby on Rails</li>
+                        <li>RSPec</li>
+                        <li>CapyBara</li>
+                        <li>Selenium</li>
+                    </ul>
+                </li>
+                <li>
+                    <div class="sub-skills">
+                        <img src="assets/images/Rectangle 57.png" alt="diamond">
+                        <h3>Skills</h3>
+                    </div>
+                    <ul class="skill-type">
+                        <li>Codekit</li>
+                        <li>Github</li>
+                        <li>Codepen</li>
+                        <li>Gitlab</li>
+                        <li>Terminal</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </section>
 </body>
