--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="#"><i class="fa fa-brands fa-medium fa-1x"></i></a>
             </li>
         </ul>
-        <div class="recent-works">
+        <section class="recent-works">
             <h2>My Recent Works</h2>
             <div class="grid-con">
                 <div class="featured">
@@ -133,8 +133,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="about">
+        </section>
+        <section class="about">
             <div class="gen-desc">
                 <h2 class="heading-text">About me</h2>
                 <p class="paragraph-text">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
@@ -180,7 +180,7 @@
                     </ul>
                 </li>
             </ul>
-        </div>
+        </section>
     </section>
 </body>
 </html>
