Add contact form CSS styles

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <form action="https://formspree.io/f/mjvdkwqz" method="post" class="contact-form">
                 <input type="text" maxlength="30" placeholder="Full name" class="input-field" name="user-name" required>
                 <input type="email" placeholder="Email" class="input-field" name="user-email" required>
-                <textarea name="user-text" maxlength="500" placeholder="Enter Text here" class="textarea-field" cols="30" rows="10" required></textarea>
+                <textarea name="user-text" maxlength="500" placeholder="Enter Text here" class="textarea-field" required></textarea>
                 <button type="submit" class="submit-btn">Get in touch</button>
             </form>
         </section>
