Fix navbar icons error when changing screen size

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#" class="nav-desktop">About</a>
             <a href="#" class="nav-desktop">contact</a>
             <img class="nav-desktop" src="assets/images/Icon - Mail.png" alt="mail icon">
-            <i class="fas fa-bars nav-mobile"></i>
+            <img class="nav-mobile" src="assets/images/Union.png" alt="3 line bars">
         </nav>
     </header>
 
