Update portfolio UI

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="assets/images/Logo Placeholder.png" alt="John Doe"></a>
+        <a href="index.html" class="logo"><img src="assets/images/Logo Placeholder.png" alt="John Doe"></a>
         <nav>
-            <a href="#" class="nav-desktop">Portfolio</a>
-            <a href="#" class="nav-desktop">About</a>
-            <a href="#" class="nav-desktop">contact</a>
+            <a href="#portfolio" class="nav-desktop">Portfolio</a>
+            <a href="#about" class="nav-desktop">About</a>
+            <a href="#contact" class="nav-desktop">contact</a>
             <img class="nav-desktop" src="assets/images/Icon - Mail.png" alt="mail icon">
             <img class="nav-mobile" src="assets/images/Union.png" alt="3 line bars">
         </nav>
@@ -24,13 +24,13 @@
     <section class="container">
         <section class="headline">
             <div class="primary-text">
-                <h1>Hey There. <br> I’m Alex</h1>
+                <h1>Hey There. <br> I’m Jose Luis</h1>
             </div>
             <div class="supporting-text">
-                <h2>I’am a Software Developer</h2>
+                <h2>I’m a Software Developer</h2>
             </div>
             <div class="description">
-                <p>I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
+                <p>I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, 
                     don’t hestiate to contact me.</p>
             </div>
             <div class="social-media">
@@ -41,7 +41,7 @@
                 <a href="#"><i class="fa fa-brands fa-medium fa-1x"></i></a>
             </div>
         </section>
-        <section class="recent-works">
+        <section id="portfolio" class="recent-works">
             <h2>My Recent Works</h2>
             <div class="featured">
                 <img src="assets/images/Img Placeholder.png" alt="Girl practicing yoga inside orange circle and border">
@@ -138,10 +138,10 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="gen-desc">
                 <h2 class="heading-text">About me</h2>
-                <p class="paragraph-text">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+                <p class="paragraph-text">Hello I’m a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
                 <button class="regular-btn">Get My Resume</button>
             </div>
             <ul class="skills">
@@ -185,7 +185,7 @@
                 </li>
             </ul>
         </section>
-        <section class="form-container">
+        <section id="contact" class="form-container">
             <p class="contact-text">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
             <form action="https://formspree.io/f/mjvdkwqz" method="post" class="contact-form">
                 <input type="text" maxlength="30" placeholder="Full name" class="input-field" name="user-name" required>
