Fix menu dropdown styles

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
         <a id="logo" href="index.html"><img src="assets/images/Logo Placeholder.png" alt="Portfolio Logo"></a>
         <nav>
-            <a class="nav nav-desktop hide" href="#portfolio">Portfolio</a>
-            <a class="nav nav-desktop hide" href="#about">About</a>
-            <a class="nav nav-desktop hide" href="#contact">contact</a>
-            <img class="nav nav-desktop hide" src="assets/images/Icon - Mail.png" alt="Contact icon">
-            <img id="menu-icon" class="nav nav-mobile" src="assets/images/Menu.png" alt="Menu icon">
-            <img id="exit-icon" class="nav nav-mobile hide" src="assets/images/Exit.png" alt="Exit icon">
+            <a class="nav-desktop hide" href="#portfolio">Portfolio</a>
+            <a class="nav-desktop hide" href="#about">About</a>
+            <a class="nav-desktop hide" href="#contact">contact</a>
+            <img id="mail-icon" class="nav-desktop" hidden src="assets/images/Icon - Mail.png" alt="Contact icon">
+            <img id="menu-icon" class="nav-mobile" src="assets/images/Menu.png" alt="Menu icon">
+            <img id="exit-icon" class="nav-mobile hide" src="assets/images/Exit.png" alt="Exit icon">
         </nav>
     </header>
 
