Add menu indicator

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <img id="mail-icon" class="nav-desktop" hidden src="assets/images/Icon - Mail.png" alt="Contact icon">
             <img id="menu-icon" class="nav-mobile" src="assets/images/Menu.png" alt="Menu icon">
             <img id="exit-icon" class="nav-mobile hide" src="assets/images/Exit.png" alt="Exit icon">
+            <div class="menu-indicator hide">
+                <img src="assets/images/Shape.png" alt="menu indicator">
+            </div>
         </nav>
     </header>
 
