--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <header>
-        <a id="logo" href="index.html"><img src="assets/images/Logo Placeholder.png" alt="Portfolio Logo"></a>
+        <a id="logo" href="index.html"><img src="assets/images/Logo-Placeholder.png" alt="Portfolio Logo"></a>
         <nav>
             <a class="nav-desktop hide" href="#portfolio">Portfolio</a>
             <a class="nav-desktop hide" href="#about">About</a>
             <a class="nav-desktop hide" href="#contact">contact</a>
-            <img id="mail-icon" class="nav-desktop" hidden src="assets/images/Icon - Mail.png" alt="Contact icon">
+            <img id="mail-icon" class="nav-desktop" hidden src="assets/images/Mail.png" alt="Contact icon">
             <img id="menu-icon" class="nav-mobile" src="assets/images/Menu.png" alt="Menu icon">
             <img id="exit-icon" class="nav-mobile hide" src="assets/images/Exit.png" alt="Exit icon">
             <div class="menu-indicator hide">
-                <img src="assets/images/Shape.png" alt="menu indicator">
+                <img src="assets/images/Bar.png" alt="menu indicator">
             </div>
         </nav>
     </header>
@@ -47,8 +47,8 @@
         </section>
         <section id="portfolio" class="recent-works">
             <h2>My Recent Works</h2>
-            <div class="featured">
-                <img src="assets/images/Img Placeholder.png" alt="Featured work, ballet dancer inside orange circle and border">
+            <div class="featured" data-card="1">
+                <img src="assets/images/Featured-Placeholder.png" alt="Featured work, ballet dancer inside orange circle and border">
                 <div class="right-block">
                     <h3>Multi-Post Stories</h3>
                     <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
@@ -58,12 +58,12 @@
                         <li>bootstrap</li>
                         <li>Ruby</li>
                     </ul>
-                    <button class="regular-btn">See Project</button>
+                    <button class="btn featured-btn work-btn" data-id="1">See Project</button>
                 </div>
             </div>
             <div class="card-works">
-                <div class="card">
-                    <img src="assets/images/Card Placeholder.png" alt="project image with a vertical dark gradient">
+                <div class="card" data-card="2">
+                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -72,11 +72,11 @@
                             <li>bootstrap</li>
                             <li>Ruby</li>
                         </ul>
-                        <button class="card-btn">See Project</button>
+                        <button class="btn work-btn" data-id="2">See Project</button>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="assets/images/Card Placeholder.png" alt="project image with a vertical dark gradient">
+                <div class="card" data-card="3">
+                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -85,11 +85,11 @@
                             <li>bootstrap</li>
                             <li>Ruby</li>
                         </ul>
-                        <button class="card-btn">See Project</button>
+                        <button class="btn work-btn" data-id="3">See Project</button>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="assets/images/Card Placeholder.png" alt="project image with a vertical dark gradient">
+                <div class="card" data-card="4">
+                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -98,11 +98,11 @@
                             <li>bootstrap</li>
                             <li>Ruby</li>
                         </ul>
-                        <button class="card-btn">See Project</button>
+                        <button class="btn work-btn" data-id="4">See Project</button>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="assets/images/Card Placeholder.png" alt="project image with a vertical dark gradient">
+                <div class="card" data-card="5">
+                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -111,11 +111,11 @@
                             <li>bootstrap</li>
                             <li>Ruby</li>
                         </ul>
-                        <button class="card-btn">See Project</button>
+                        <button class="btn work-btn" data-id="5">See Project</button>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="assets/images/Card Placeholder.png" alt="project image with a vertical dark gradient">
+                <div class="card" data-card="6">
+                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -124,11 +124,11 @@
                             <li>bootstrap</li>
                             <li>Ruby</li>
                         </ul>
-                        <button class="card-btn">See Project</button>
+                        <button class="btn work-btn" data-id="6">See Project</button>
                     </div>
                 </div>
-                <div class="card">
-                    <img src="assets/images/Card Placeholder.png" alt="project image with a vertical dark gradient">
+                <div class="card" data-card="7">
+                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -137,7 +137,7 @@
                             <li>bootstrap</li>
                             <li>Ruby</li>
                         </ul>
-                        <button class="card-btn">See Project</button>
+                        <button class="btn work-btn" data-id="7">See Project</button>
                     </div>
                 </div>
             </div>
@@ -146,12 +146,12 @@
             <div class="gen-desc">
                 <h2 class="heading-text">About me</h2>
                 <p class="paragraph-text">Hello I’m a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-                <button class="regular-btn">Get My Resume</button>
+                <button class="btn">Get My Resume</button>
             </div>
             <ul class="skills">
                 <li>
                     <div class="sub-skills">
-                        <img src="assets/images/Rectangle 55.png" alt="diamond bulletpoint">
+                        <img src="assets/images/Diamond.png" alt="diamond bulletpoint">
                         <h3>Language</h3>
                     </div>
                     <ul class="skill-type">
@@ -163,7 +163,7 @@
                 </li>
                 <li>
                     <div class="sub-skills">
-                        <img src="assets/images/Rectangle 56.png" alt="square bulletpoint">
+                        <img src="assets/images/Square.png" alt="square bulletpoint">
                         <h3>Framework</h3>
                     </div>
                     <ul class="skill-type">
@@ -176,7 +176,7 @@
                 </li>
                 <li>
                     <div class="sub-skills">
-                        <img src="assets/images/Rectangle 57.png" alt="circle bulletpoint">
+                        <img src="assets/images/Circle.png" alt="circle bulletpoint">
                         <h3>Skills</h3>
                     </div>
                     <ul class="skill-type">
@@ -198,7 +198,7 @@
                 <input type="email" placeholder="Email" class="input-field" name="user-email" required>
                 <label for="user-text" hidden>Message</label>
                 <textarea name="user-text" maxlength="500" placeholder="Enter Text here" class="textarea-field" required></textarea>
-                <button type="submit" class="submit-btn">Get in touch</button>
+                <button type="submit" class="btn">Get in touch</button>
             </form>
         </section>
         <footer>
