Add modal using js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img id="menu-icon" class="nav-mobile" src="assets/images/Menu.png" alt="Menu icon">
             <img id="exit-icon" class="nav-mobile hide" src="assets/images/Exit.png" alt="Exit icon">
             <div class="menu-indicator hide">
-                <img src="assets/images/Bar.png" alt="menu indicator">
+                <img src="assets/images/Bar.png" alt="Bar">
             </div>
         </nav>
     </header>
@@ -63,7 +63,7 @@
             </div>
             <div class="card-works">
                 <div class="card" data-card="2">
-                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
+                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="card" data-card="3">
-                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
+                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="card" data-card="4">
-                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
+                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="card" data-card="5">
-                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
+                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="card" data-card="6">
-                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
+                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="card" data-card="7">
-                    <img src="assets/images/Card-Placeholder.png" alt="project image with a vertical dark gradient">
+                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
                     <div class="right-block">
                         <h3>Profesional Art Printing Data</h3>
                         <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
@@ -151,7 +151,7 @@
             <ul class="skills">
                 <li>
                     <div class="sub-skills">
-                        <img src="assets/images/Diamond.png" alt="diamond bulletpoint">
+                        <img src="assets/images/Diamond.png" alt="Diamond bulletpoint">
                         <h3>Language</h3>
                     </div>
                     <ul class="skill-type">
@@ -163,7 +163,7 @@
                 </li>
                 <li>
                     <div class="sub-skills">
-                        <img src="assets/images/Square.png" alt="square bulletpoint">
+                        <img src="assets/images/Square.png" alt="Square bulletpoint">
                         <h3>Framework</h3>
                     </div>
                     <ul class="skill-type">
@@ -176,7 +176,7 @@
                 </li>
                 <li>
                     <div class="sub-skills">
-                        <img src="assets/images/Circle.png" alt="circle bulletpoint">
+                        <img src="assets/images/Circle.png" alt="Circle bulletpoint">
                         <h3>Skills</h3>
                     </div>
                     <ul class="skill-type">
