Add object list and dinamically added recent works

--- a/index.html
+++ b/index.html
@@ -47,99 +47,9 @@
         </section>
         <section id="portfolio" class="recent-works">
             <h2>My Recent Works</h2>
-            <div class="featured" data-card="1">
-                <img src="assets/images/Featured-Placeholder.png" alt="Featured work, ballet dancer inside orange circle and border">
-                <div class="right-block">
-                    <h3>Multi-Post Stories</h3>
-                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-                    <ul class="tags">
-                        <li>css</li>
-                        <li>html</li>
-                        <li>bootstrap</li>
-                        <li>Ruby</li>
-                    </ul>
-                    <button class="btn featured-btn work-btn" data-id="1">See Project</button>
-                </div>
+            <div class="featured-work">
             </div>
             <div class="card-works">
-                <div class="card" data-card="2">
-                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
-                    <div class="right-block">
-                        <h3>Profesional Art Printing Data</h3>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
-                        <ul class="tags">
-                            <li>html</li>
-                            <li>bootstrap</li>
-                            <li>Ruby</li>
-                        </ul>
-                        <button class="btn work-btn" data-id="2">See Project</button>
-                    </div>
-                </div>
-                <div class="card" data-card="3">
-                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
-                    <div class="right-block">
-                        <h3>Profesional Art Printing Data</h3>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
-                        <ul class="tags">
-                            <li>html</li>
-                            <li>bootstrap</li>
-                            <li>Ruby</li>
-                        </ul>
-                        <button class="btn work-btn" data-id="3">See Project</button>
-                    </div>
-                </div>
-                <div class="card" data-card="4">
-                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
-                    <div class="right-block">
-                        <h3>Profesional Art Printing Data</h3>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
-                        <ul class="tags">
-                            <li>html</li>
-                            <li>bootstrap</li>
-                            <li>Ruby</li>
-                        </ul>
-                        <button class="btn work-btn" data-id="4">See Project</button>
-                    </div>
-                </div>
-                <div class="card" data-card="5">
-                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
-                    <div class="right-block">
-                        <h3>Profesional Art Printing Data</h3>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
-                        <ul class="tags">
-                            <li>html</li>
-                            <li>bootstrap</li>
-                            <li>Ruby</li>
-                        </ul>
-                        <button class="btn work-btn" data-id="5">See Project</button>
-                    </div>
-                </div>
-                <div class="card" data-card="6">
-                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
-                    <div class="right-block">
-                        <h3>Profesional Art Printing Data</h3>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
-                        <ul class="tags">
-                            <li>html</li>
-                            <li>bootstrap</li>
-                            <li>Ruby</li>
-                        </ul>
-                        <button class="btn work-btn" data-id="6">See Project</button>
-                    </div>
-                </div>
-                <div class="card" data-card="7">
-                    <img src="assets/images/Card-Placeholder.png" alt="Project image with a vertical dark gradient">
-                    <div class="right-block">
-                        <h3>Profesional Art Printing Data</h3>
-                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard.</p>
-                        <ul class="tags">
-                            <li>html</li>
-                            <li>bootstrap</li>
-                            <li>Ruby</li>
-                        </ul>
-                        <button class="btn work-btn" data-id="7">See Project</button>
-                    </div>
-                </div>
             </div>
         </section>
         <section id="about" class="about">
