--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 <input type="text" id="user-name" name="user-name" class="input-field" placeholder="Full name" maxlength="30" required>
                 <label for="user-email" hidden>Email</label>
                 <input type="email" id="user-email" name="user-email" class="input-field" placeholder="Email" required>
-                <label for="user-text" hidden>Message</label>
-                <textarea id="user-text" name="user-text" class="textarea-field" placeholder="Enter Text here" maxlength="500" required></textarea>
+                <label for="user-message" hidden>Message</label>
+                <textarea id="user-message" name="user-message" class="textarea-field" placeholder="Enter Text here" maxlength="500" required></textarea>
                 <button type="submit" class="btn">Get in touch</button>
             </form>
         </section>
