--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
             <p class="contact-text">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
             <form id="contact-form" action="https://formspree.io/f/mjvdkwqz" method="post" class="contact-form">
                 <label for="user-name" hidden >Full name</label>
-                <input type="text" id="user-name" name="user-name" class="input-field" placeholder="Full name" maxlength="30" required>
+                <input type="text" id="user-name" name="name" class="input-field field" placeholder="Full name" maxlength="30" required>
                 <label for="user-email" hidden>Email</label>
-                <input type="email" id="user-email" name="user-email" class="input-field" placeholder="Email" required>
+                <input type="email" id="user-email" name="email" class="input-field field" placeholder="Email" required>
                 <label for="user-message" hidden>Message</label>
-                <textarea id="user-message" name="user-message" class="textarea-field" placeholder="Enter Text here" maxlength="500" required></textarea>
+                <textarea id="user-message" name="message" class="textarea-field field" placeholder="Enter Text here" maxlength="500" required></textarea>
                 <button type="submit" class="btn">Get in touch</button>
             </form>
         </section>
